2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* SEMI-MK (compile-semi): Set mime-situation-examples-file to nil.

	* mime-view.el: Do not modify mime-situation-examples-file's value.

2014-04-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-define-keymap): Use mapc instead of
	mapcar for side effect.

2014-03-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Set up for previewing
	application/x-pkcs7-signature part.

2014-02-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-normalize-eol-crlf): New CCL program.
	(mime-edit-sign-pgp-mime): Use it to improve speed.

	* mime-pgp.el (mime-pgp-decrypt-string)
	(mime-verify-application/*-signature-internal): Refactored.

2014-02-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-entity): Add comment.

2014-02-12  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove preview setting for multipart/signed part.
	Use mime-pgp-verify-when-preview and mime-pgp-decrypt-when-preview
	to define visibility conditions.

	* mime-view.el (mime-display-entity): insert LF when inserted
	content does not end with LF.

	* mime-pgp.el (mime-display-multipart/signed): Removed.
	(mime-display-multipart/pgp-encrypted): Adapt to recent change.

2014-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Set up for previewing application/pkcs7-mime
	part.

	* mime-view.el (mime-pgp-verify-when-preview)
	(mime-pgp-decrypt-when-preview): Moved from mime-pgp.el.
	(mime-display-entity-visible-p): New function.
	(mime-display-entity): function, variable, t, and nil are
	acceptable for situation of entity-button, header and body.
	Function will receive one argument SITUATION and return visible,
	invisible, t or nil.

	* mime-pgp.el (mime-pgp-verify-when-preview)
	(mime-pgp-decrypt-when-preview): Moved to mime-view.el.
	(mime-preview-application/pkcs7-mime): New function.

2014-02-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
